--- a/app/src/main/res/layout/activity_provider_manager.xml
+++ b/app/src/main/res/layout/activity_provider_manager.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:padding="16dp"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:padding="12dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btnAddProvider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add provider" />
+        android:text="Add Provider" />
 
-    <Button
-        android:id="@+id/btnReloadIntoApp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save providers to local registry" />
-
-    <ListView
-        android:id="@+id/providerList"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/providerRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scrollbars="vertical" />
+
 </LinearLayout>
