--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mainLayout"
     android:orientation="vertical"
-    android:padding="12dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Search input -->
     <EditText
         android:id="@+id/searchBox"
-        android:hint="Enter search query"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <!-- Search button -->
-    <Button
-        android:id="@+id/btnSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
-        android:layout_marginTop="8dp" />
+        android:hint="Enter search query" />
 
-    <!-- Manage Providers button -->
     <Button
-        android:id="@+id/btnManageProviders"
-        android:layout_width="match_parent"
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Manage Providers"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp" />
+        android:text="Search" />
 
-    <!-- Results list -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/resultsList"
+        android:id="@+id/resultsRecycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
